# timezone-service

./: Dockerfile  Makefile  README.md  TASK.md  TODO.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
requirements/: requirements.in  requirements.txt
src/timezone_service/: __init__.py  main.py  timezone_db.py
tests/: conftest.py
tests/acceptance/: test_timezones_endpoint.py
tests/unit/: test_timezone_db.py  test_timezones_endpoint.py
