[project]
name = "timezone-service"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]
addopts = [
    "--import-mode=importlib",
    "--showlocals"
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "RUF",   # ruff-specific
    "ERA",   # eradicate: commented-out code
    "FAST",  # fastapi
    "I",     # isort
    "ANN",   # annotations
    "BLE",   # blind except
    "FA",    # future annotations
    "PT",    # pytest style
    "SIM",   # simplify
    "TID",   # tidy imports
    "TD",    # todos
    "PTH",   # pathlib
    "C90",   # mccabe
    "NPY",   # numpy
    "PD",    # pandas
    "PERF",  # perflint
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F"      # pyflakes
]
ignore = []
future-annotations = true

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.extend-per-file-ignores]
# Ignore "ANN201" (missing return type for public function) in test files
"tests/**/*.py" = ["ANN201"]

[tool.ruff.lint.flake8-tidy-imports]
banned-module-level-imports = [
    "geopandas"  # slow to import
]


[tool.pytest-watcher]
now = true
clear = true
delay = 0.5
